Re-implement page container to fix admin bar issue on mobile

--- a/src/assets/styles/layout/page/_page.scss
+++ b/src/assets/styles/layout/page/_page.scss
@@ -4,16 +4,17 @@
  * Page
 \* ------------------------------------------------------------------------ */
 
-html {
+html,
+body {
     & {
+        background: $page_background;
         height: 100%;
         width: 100%;
     }
 }
 
-body {
+.page_container {
     & {
-        background: $page_background;
         min-height: 100%;
         position: relative;
         width: 100%;
